--- a/CSS RWD/RWD_Media_Queries/gridRWD.css
+++ b/CSS RWD/RWD_Media_Queries/gridRWD.css
@@ -114,3 +114,10 @@
         width: 100%;
     }
 }
+
+@media only screen and (orientation: landscape) {
+    body {
+        background-color: lightblue;
+    }
+    /* Thích ứng với chiều xoay của màn hình */
+}
