--- a/Case_study_1/HAIR_STUDIO/style.css
+++ b/Case_study_1/HAIR_STUDIO/style.css
@@ -46,7 +46,7 @@
     text-decoration: none;
     display: inline-block;
     margin: 0 10px;
-    padding: 12px 0;
+    pa dding: 12px 0;
     color: #fff;
     border: .5px solid #fff;
     z-index: 1;
@@ -160,6 +160,7 @@ nav ul li a {
 
 .feature-box {
     width: 80%;
+    /* Căn giữa block */
     margin: auto;
     display: flex;
     flex-wrap: wrap;
